# cis410-project7

./: README.md
project7/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  proj7.sln  proj7.vcxproj  proj7.vcxproj.filters
project7/Debug/: proj7.ilk
project7/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
project7/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
project7/jacobbrown_project7/: jacobbrown_proj7.cxx
project7/proj7.dir/Debug/proj7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  proj7.lastbuildstate
